--- a/templates/layout.html
+++ b/templates/layout.html
@@ -39,23 +39,50 @@
                     <a class="nav-link" href="/">मुख्य पृष्ठ</a>
                 </li>
                 <li class="nav-item {% block blogactive %}{% endblock blogactive%}">
-                    <a class="nav-link" href="/blog">Blog</a>
+                    <a class="nav-link" href="/blog">ब्लॉग</a>
                 </li>
                 </li>
                 <li class="nav-item {% block aboutactive %}{% endblock aboutactive%}">
-                    <a class="nav-link" href="/about">About</a>
+                    <a class="nav-link" href="/about">कविता संसार के बारे में</a>
                 </li>
                 </li>
                 <li class="nav-item {% block contactactive %}{% endblock contactactive%}">
-                    <a class="nav-link" href="/contact">Contact</a>
+                    <a class="nav-link" href="/contact">सम्पर्क करें</a>
                 </li>
 
             </ul>
             <form class="form-inline my-2 my-lg-0" method="get" action="/search">
-                <input class="form-control mr-sm-2" type="search" name="query" id="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                <input class="form-control mr-sm-2" type="search" name="query" id="search" placeholder="खोजें"
+                    aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">खोजें</button>
                 <a class="btn btn-outline-success m-2 my-sm-0" href="/admin" type="submit">Admin</a>
             </form>
+            <div>
+                {% if not user.is_authenticated %}
+                <!-- Button to trigger signup modal -->
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#signupModal">
+                    साइन अप करें
+                </button>
+                <!-- Button to trigger login modal -->
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#loginModal">
+                    लॉगइन
+                </button>
+                {% else %}
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            स्वागत है {{request.user}}
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="/logout">लॉगआउट</a>
+
+                        </div>
+                    </li>
+                </ul>
+
+                {% endif %}
+            </div>
         </div>
 
     </nav>
@@ -69,6 +96,87 @@
     </div>
     {% endfor %}
     {% endif %}
+
+
+    <!-- Signup Modal -->
+    <div class="modal fade" id="signupModal" tabindex="-1" role="dialog" aria-labelledby="signupModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="signupModalLabel">साइन अप करें</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form method="post" action="/signup">
+                        <div class="form-group">
+                            <label for="email">ईमेल</label>
+                            <input type="email" class="form-control" id="email" name="email" required>
+                            <small id="emailHelp" class="form-text text-muted">हम आपके ईमेल को कभी भी किसी और के साथ
+                                साझा नहीं करेंगे।</small>
+                        </div>
+                        <div class="form-group">
+                            <label for="username">सदस्यनाम</label>
+                            <input type="username" class="form-control" id="username" name="username" required>
+                            <small id="usernameHelp" class="form-text text-muted">उपयोगकर्ता नाम कम से कम 8 वर्णों का
+                                अल्फ़ान्यूमेरिक होना चाहिए।
+                                विशेष वर्ण नहीं होने चाहिए जैसे: @!/\*$%</small>
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">पासवर्ड</label>
+                            <input type="password" class="form-control" id="pass1" name="pass1" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">पासवर्ड पुष्टि</label>
+                            <input type="password" class="form-control" id="pass2" name="pass2" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputEmail1">नाम</label>
+                            <input type="text" class="form-control" id="fname" name="fname" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputEmail1">उपनाम</label>
+                            <input type="text" class="form-control" id="lname" name="lname" required>
+                        </div>
+                        {% csrf_token %}
+                        <button type="submit" class="btn btn-primary">साइन अप करें</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Login Modal -->
+    <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="loginModalLabel">लॉग इन करें</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form method="post" action="/login">
+                        <div class="form-group">
+                            <label for="loginusername">सदस्यनाम</label>
+                            <input type="text" class="form-control" id="loginusername" name="loginusername">
+
+                        </div>
+                        <div class="form-group">
+                            <label for="loginpass">पासवर्ड</label>
+                            <input type="password" class="form-control" id="loginpass" name="loginpass">
+                        </div>
+                        {% csrf_token %}
+                        <button type="submit" class="btn btn-primary">लॉग इन करें</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 
     {% block body %} {% endblock body%}
 
